MDEV-3988 fix.

Subquery turned into constant too late to be excluded from grouping list so test for constant added to the create_temp_table().